otp send and contest type changes add
